# tick_screener_rs

./: .gitignore  Cargo.toml  README.md  config.json.example
benches/: interner.rs  scanner_core.rs
src/: io_util.rs  lib.rs  logging.rs  main.rs
src/alert/: mod.rs  router.rs  telegram.rs
src/config/: mod.rs  model.rs  registry.rs  watcher.rs
src/exchanges/: binance.rs  bitget.rs  bybit.rs  connector.rs  gate.rs  kucoin.rs  mexc.rs  mod.rs  normalized.rs
src/feed/: manager.rs  mod.rs
src/interner/: mod.rs
src/scanner/: core.rs  metrics.rs  mod.rs  processor.rs
