[package]
name = "tick-screener"
version = "0.3.0"
edition = "2024"
description = "Высокопроизводительный сканер аномалий торговых пар на нескольких биржах"
authors = ["JustAMamont"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"
notify = "8"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"
crossbeam-channel = "0.5"
thread_local = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
url = "2"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
prost = "0.14.3"

# Опциональная поддержка io_uring для асинхронного файлового I/O.
# Включите через `--features uring` для использования tokio-uring
# при чтении конфига и записи логов. Требует Linux 5.1+.
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
# Для юнит-тестов и бенчей.
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[features]
default = []
# Активирует io_uring-рентайм для файловых операций. Только Linux 5.1+.
uring = ["dep:tokio-uring"]

# Бенчи: `cargo bench --features bench`
bench = []

[[bench]]
name = "interner"
harness = false
required-features = ["bench"]

[[bench]]
name = "scanner_core"
harness = false
required-features = ["bench"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Профиль для бенчей: оптимизации как в release, но с debug-символами
# для профайлинга.
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true
